--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 					<ul>
 						<li><a href="#intro">Introdução</a></li>
 						<li><a href="#one">O que eu faço</a></li>
-						<li><a href="#two">Quem eu Sou</a></li>
-						<li><a href="#work">Meus Trabalhos</a></li>
-						<li><a href="#contact">Contato</a></li>
+						<li><a href="#OQueFaco">Quem eu Sou</a></li>
+						<li><a href="#Trabalhos">Meus Trabalhos</a></li>
+						<li><a href="#contato">Contato</a></li>
 					</ul>
 				</nav>
 			</header>
